src/components/Totals/styles.module.css
.root {
  font-weight: 700;
  line-height: 1;
  position: fixed;
  right: 24px;
  top: 24px;
  z-index: 10;
}

.count {
  font-size: 32px;
  line-height: 32px;
  margin-bottom: 24px;
  text-align: right;
}

.count > div:first-child {
  font-size: 16px;
  line-height: 22px;
  opacity: 0.5;
}

@media only screen and (max-width: 767px) {
  .root {
    align-items: center;
    display: flex;
    left: 0;
    top: 0;
    width: 100%;
  }

  .count {
    align-items: center;
    display: flex;
    flex: 1;
    font-size: 16px;
    line-height: 22px;
    padding: 24px;
    text-align: left;
  }

  .count > div:first-child {
    margin-right: 8px;
  }

  .count:last-child {
    justify-content: flex-end;
  }
}

